# code-documentation-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/evals/reports/: 2026-06-11-eval-report.md
backend/src/codedoc/: main.py  settings.py  structured_logging.py
backend/src/codedoc/application/answering/: citation_parser.py  citation_validator.py  evidence_formatter.py  prompt_loader.py  question_answering_service.py  single_shot_answer_strategy.py  token_cost_calculator.py
backend/src/codedoc/application/guardrails/: question_scope_guard.py
backend/src/codedoc/application/ingestion/: repository_ingestion_service.py  source_file_scanner.py
backend/src/codedoc/domain/: answer.py  chat.py  chunk.py  code_repository.py  errors.py  query_trace.py  source_file.py  streaming.py
backend/src/codedoc/evals/: eval_report_builder.py  eval_runner.py  golden_questions.yaml  judge_rubric.md
backend/src/codedoc/prompts/: agentic_system_prompt.md  single_shot_system_prompt.md
backend/tests/fixtures/: fake_repository_builder.py  sample_component.ts  sample_module.py
backend/tests/integration/: conftest.py  test_opensearch_adapters.py
backend/tests/unit/: chat_model_fakes.py  fakes.py  test_agent_toolset.py  test_agentic_answer_strategy.py  test_chunking_strategy_resolver.py  test_citation_parser.py  test_citation_validator.py  test_domain.py  test_eval_report_builder.py  test_evidence_formatter.py  test_fakes.py  test_git_clone_client.py  test_golden_dataset.py  test_judge_output_parsing.py  test_line_window_chunking_strategy.py  test_prompt_loader.py  test_question_answering_service.py  test_question_api.py  test_question_api_fixtures.py  test_question_scope_guard.py  test_repository_api.py  test_repository_ingestion_service.py  test_retrying_embeddings.py  test_settings.py  test_single_shot_answer_strategy.py  test_source_file_scanner.py  test_structured_logging.py  test_token_cost_calculator.py  test_tree_sitter_chunking_strategy.py
(+63 files in other folders)
